--- a/html/date/2024-10/index.htm
+++ b/html/date/2024-10/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10104.htm" title="首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）">首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-10456.htm" title="1970年农历4月27日7时生五行（1970年4月27日生日命运）">1970年农历4月27日7时生五行（1970年4月27日生日命运）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9725.htm" title="昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）">昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9889.htm" title="上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)">上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-9782.htm" title="重庆正规免费领养宠物的地方（重庆正规免费领养宠物的地方有哪些）">重庆正规免费领养宠物的地方（重庆正规免费领养宠物的地方有哪些）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9637.htm" title="附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）">附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）</a></li>
                         <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
-                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
