--- a/html/date/2024-10/page-2.htm
+++ b/html/date/2024-10/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9781.htm" title="重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）">重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-10104.htm" title="首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）">首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9637.htm" title="附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）">附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
                         <li class="py-2"><a href="/html/category/article-9584.htm" title="穷养猫还是富养猫（穷养猫富养狗是真的吗）">穷养猫还是富养猫（穷养猫富养狗是真的吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9889.htm" title="上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)">上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10103.htm" title="狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）">狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9638.htm" title="河北农大动物医院工资怎么样（河北农业大学动物医学院电话）">河北农大动物医院工资怎么样（河北农业大学动物医学院电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9690.htm" title="南京市哪里有可以领养狗狗的地方（南京哪有领养小狗的地方）">南京市哪里有可以领养狗狗的地方（南京哪有领养小狗的地方）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9725.htm" title="昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）">昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
