--- a/html/date/2024-10/page-6.htm
+++ b/html/date/2024-10/page-6.htm
@@ -258,16 +258,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9261.htm" title="动物疫苗生产流程（动物疫苗生产流程视频）">动物疫苗生产流程（动物疫苗生产流程视频）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-9530.htm" title="动物疫苗价格表最新图片及价格（动物疫苗法最新消息2019）">动物疫苗价格表最新图片及价格（动物疫苗法最新消息2019）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10456.htm" title="1970年农历4月27日7时生五行（1970年4月27日生日命运）">1970年农历4月27日7时生五行（1970年4月27日生日命运）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
+                        <li class="py-2"><a href="/html/category/article-10258.htm" title="宠物寄养合同范本大全（宠物寄养合同有没有法律效应）">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10103.htm" title="狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）">狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9529.htm" title="琅琊榜被吹得太厉害了（速看）">琅琊榜被吹得太厉害了（速看）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
                         <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10156.htm" title="哪里有回收狗的地方（专门卖宠物的app）">哪里有回收狗的地方（专门卖宠物的app）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9317.htm" title="上海24小时宠物急诊（上海宠物急救中心电话）">上海24小时宠物急诊（上海宠物急救中心电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
                     </ul>
     </div>
 </div>
@@ -278,7 +278,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
