--- a/html/date/2024-07/page-2.htm
+++ b/html/date/2024-07/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10156.htm" title="哪里有回收狗的地方（专门卖宠物的app）">哪里有回收狗的地方（专门卖宠物的app）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9637.htm" title="附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）">附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
                         <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10822.htm" title="有宠物回收的吗（有宠物回收的吗知乎）">有宠物回收的吗（有宠物回收的吗知乎）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9781.htm" title="重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）">重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-9725.htm" title="昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）">昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
