--- a/html/date/2024-09/page-2.htm
+++ b/html/date/2024-09/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
+                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9781.htm" title="重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）">重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10822.htm" title="有宠物回收的吗（有宠物回收的吗知乎）">有宠物回收的吗（有宠物回收的吗知乎）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
