--- a/html/date/2024-10/index.htm
+++ b/html/date/2024-10/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9889.htm" title="上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)">上海定制衣柜什么牌子好(上海定制衣柜哪家性价比高)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-9782.htm" title="重庆正规免费领养宠物的地方（重庆正规免费领养宠物的地方有哪些）">重庆正规免费领养宠物的地方（重庆正规免费领养宠物的地方有哪些）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
-                        <li class="py-2"><a href="/html/category/article-9637.htm" title="附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）">附近哪有宠物店买狗粮的（附近卖宠物狗粮的地方）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
-                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10103.htm" title="狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）">狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10258.htm" title="宠物寄养合同范本大全（宠物寄养合同有没有法律效应）">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
                         <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">18</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
