--- a/html/date/2024-11/page-3.htm
+++ b/html/date/2024-11/page-3.htm
@@ -2,20 +2,21 @@
 <html lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="https://australiaaddress.github.io/html/category/article-10297.htm" />
+        <link rel="canonical" href="https://australiaaddress.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</title>
+    <title>2024-11归档 - 澳大利亚地址</title>
     <link rel="icon" href="https://australiaaddress.github.io/favicon.ico" type="image/x-icon"/>
-        <meta name="description" content="摘要：       今天给各位分享成都宠物领养中心领养收费吗现在还收费吗的知识，其中也会对成都领养宠物吧进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、领养的." />
-        <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://australiaaddress.github.io/html/category/article-10297.htm" />
+        <meta name="keywords" content="2024-11归档" />
+        <meta name="description" content="2024-11归档" />
+        <meta property="og:type" content="webpage" />
+    <meta property="og:url" content="https://australiaaddress.github.io" />
     <meta property="og:site_name" content="澳大利亚地址" />
-    <meta property="og:title" content="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）" />
-    <meta property="og:image" content="https://australiaaddress.github.io/uploads/20240412/e3c5e21e1625e6664453df160a14fa78.webp" />
-        <meta property="og:description" content="摘要：       今天给各位分享成都宠物领养中心领养收费吗现在还收费吗的知识，其中也会对成都领养宠物吧进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、领养的." />
-        <meta name="twitter:image" content="https://australiaaddress.github.io/uploads/20240412/e3c5e21e1625e6664453df160a14fa78.webp" />
+    <meta property="og:title" content="2024-11归档 - 澳大利亚地址" />
+    <meta property="og:image" content="/uploads/20240515/63aed74b903f6c2f7f0e86c63672f389.jpg" />
+        <meta property="og:description" content="2024-11归档" />
+        <meta name="twitter:image" content="/uploads/20240515/63aed74b903f6c2f7f0e86c63672f389.jpg" />
     <meta name="applicable-device" content="pc,mobile" />
     <meta http-equiv="Cache-Control" content="no-transform" />
     <meta name="robots" content="max-image-preview:large" />
@@ -114,24 +115,110 @@ var _hmt = _hmt || [];
             </div>
             <div class="row">
                 <div class="col-md-9">
-                    <ol class="breadcrumb">
-                      <li><a href="/">首页</a></li>
-                      <li><a href="/html/category/">博客分类</a></li>
-                      <li class="active">正文</li>
-                    </ol>
-                    
-                    <div class="panel panel-default" id="blog-detail">
+                    <div class="panel panel-default mb-2" id="blog-list">
                         <div class="panel-heading">
-                            <h1 class="my-1">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</h1>
+                            <h2>2024-11 归档结果</h2>
                         </div>
                         <div class="panel-body">
-                                <div class="article-zhaiyao">       <strong><img src="http://www.to3158.cn/zb_users/theme/koilee/style/images/favicon_example.ico" alt="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">摘要：</strong>       今天给各位分享成都宠物领养中心领养收费吗现在还收费吗的知识，其中也会对成都领养宠物吧进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、领养的...    </div>    <p>今天给各位分享成都宠物领养中心领养收费吗现在还收费吗的知识，其中也会对成都领养宠物吧进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！</p><div style="text-align:center;"><img style="max-width: 100%;" alt="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）" src="https://img1.baidu.com/it/u=1400939271,1072719907&fm=253&fmt=auto&app=120&f=JPEG?w=500&h=853"></div><div><div style="color:#999;text-align:center;">（图片来源网络，侵删）</div></div><h2>本文目录一览：</h2><ul><li style='margin-bottom: 3px;list-style: none'> 1、领养的狗狗要钱吗? </li> <li style='margin-bottom: 3px;list-style: none'> 2、领养狗狗需要钱吗?还要注意什么 </li> <li style='margin-bottom: 3px;list-style: none'> 3、去宠物店收养小猫咪要钱吗? </li> <li style='margin-bottom: 3px;list-style: none'> 4、成都启明小动物保护中心领养狗要给钱。? </li> </ul><h2 id='领养的狗狗要钱吗?'>领养的狗狗要钱吗?</h2> <p>其实我们常见的是很多救助站，虽然没有说，等你领养狗狗的时候要钱，但是当你把狗狗领养走的时候，一定要给剩下的狗狗捐助一些狗粮。毕竟我们作为，喜欢小动物的人。我们就要付出自己的爱心。如果最初都不愿意去付出。</p><p>另外，你要免费领养狗狗，最好经过熟人介绍，不要轻易相信网络上的免费领养信息，免得到时候上当受骗。</p><p>领养狗狗一般需要支付一定费用，具体金额因领养机构或个人而异。此外，领养狗狗还需要考虑以下几个方面： 医疗保健费用：领养狗狗需要给它进行疫苗接种、体内外驱虫、绝育等医疗保健，这些费用需要承担。</p><h2 id='领养狗狗需要钱吗?还要注意什么'>领养狗狗需要钱吗?还要注意什么</h2> <p>1、领养一只狗狗需要付出一定的费用，这主要包括领养费、养护费以及医疗费用等。领养费是领养机构为了维持自身运营所收取的费用，一般都是比较合理的。养护费主要包括食品、寄养费等，这些费用随着狗狗的品种和身体状况而异。</p><div style="text-align:center;"><img style="max-width: 100%;" alt="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）" src="https://img2.baidu.com/it/u=4135034764,1563171152&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=667"></div><div><div style="color:#999;text-align:center;">（图片来源网络，侵删）</div></div><p>2、领养狗狗不要钱，但你要给狗狗办狗证。2，一般来说领养狗狗没有什么苛刻的条件，而且办理的流程手续也很简单。需要领养狗狗最好是到当地动物领养中心去咨询了解情况，然后按照流程标准来办理。</p><p>3、领养狗狗不要钱。领养宠物一般是不要钱的，到相关动物领养中心办理相关手续应该就可以领养。</p><h2 id='去宠物店收养小猫咪要钱吗?'>去宠物店收养小猫咪要钱吗?</h2> <p>一般来说，领养一只猫咪的费用在几百元至一千元左右不等。而在一些爱心人士的个人领养行动中，可能会酌情收取一些费用，但往往也不会太高。尽管领养费用不同，但是爱心收养一只猫咪所需要的费用并不仅仅是这些费用的总和。</p><p>首先，如果你从当地的动物救助组织或收容所领养这只猫，通常会收取一定的领养费用。这个费用一般用于支付猫咪的兽医检查、疫苗注射和绝育/绝育手术等必要费用。领养费用的大小因地区而异，一般在50-200元人民币之间。</p><div style="text-align:center;"><img style="max-width: 100%;" alt="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）" src="https://img1.baidu.com/it/u=3888750138,631060090&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=666"></div><div><div style="color:#999;text-align:center;">（图片来源网络，侵删）</div></div><p>“猫不想养了，宠物店也收猫。当然也会有些宠物店不收猫，此时主人可以在朋友圈发送猫的帖子，或者在小区告示栏贴领养告示，在贴吧等网站发布领养贴，以及将猫咪带去花鸟市场、宠物交易集市售卖。</p><p>杭州的宠物店可以领养小猫 ，需要收费。猫喂养常识 幼猫 少食多餐，喂食要注意定时、定量、定点。定时：每天在固定的时间喂食，养成良好的吃饭习惯。</p><p>可以要，要不要给钱看情况。如果对方不要钱就不用。</p><p>这个要看宠物店是否有这样的服务，大多宠物店是不会提供领养服务，因为盈利很少，而且出售的猫猫大多千元以上。有的宠物医院可以免费领养，你可以打电话给附近的宠物医院问问。</p><h2 id='成都启明小动物保护中心领养狗要给钱。?'>成都启明小动物保护中心领养狗要给钱。?</h2> <p>领养狗狗不要钱。领养宠物一般是不要钱的，到相关动物领养中心办理相关手续应该就可以领养。</p><p>免费。收留中心就是救助站，一般这些机构都是非营利性的。而且都是靠一些好心人的捐助和一些志愿者才把它建立起来的。就住下来的狗，其实也是数量有限。不可能所有的流浪狗都收进去。但是看到的时候又不得不收。</p><p>领养狗狗一般需要支付一定费用，具体金额因领养机构或个人而异。此外，领养狗狗还需要考虑以下几个方面： 医疗保健费用：领养狗狗需要给它进行疫苗接种、体内外驱虫、绝育等医疗保健，这些费用需要承担。</p><p>这是属于正常的现象，因为所谓领养的狗子之前也进行了一系列的管理，有开销。</p><p>定期给狗狗做驱虫和洗澡，保证其清洁卫生。总之，领养狗狗需要付出一定的费用和精力，但这是一种对生命负责的行为，也是一种令人满足的生活方式。当我们把狗狗当作家庭成员来对待，它们也会给我们带来无限的欢乐和陪伴。</p><p>分析如下；1，领养狗狗不要钱，但你要给狗狗办狗证。2，一般来说领养狗狗没有什么苛刻的条件，而且办理的流程手续也很简单。需要领养狗狗最好是到当地动物领养中心去咨询了解情况，然后按照流程标准来办理。</p><p>成都宠物领养中心领养收费吗现在还收费吗的介绍就聊到这里吧，感谢你花时间阅读本站内容，更多关于成都领养宠物吧、成都宠物领养中心领养收费吗现在还收费吗的信息别忘了在本站进行查找喔。</p>                          </div>
-                        <div class="py-2 px-4">
-                                                        <p>上一个：<a href="/html/category/article-10258.htm">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></p>
-                                                        <p>下一个：<a href="/html/category/article-10298.htm">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></p>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10610.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)" src="/uploads/20240412/aff838dbe1532452009b5df5d17b2d56.webp" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></div>
+                                    <div class="desc">哪些车是比较畅销的？很多朋友对这方面很关心，蝶侠整理了相关文章，供大家参考，一起来看一下吧！本文目录一览：1、哪些车是二手车市场比较畅销的车型？2、十万以下的二手车哪几款性能比较好？3、15万*什么二</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-03</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10609.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="兰州狗粮批发市场电话地址（兰州狗狗市场）" src="/uploads/20240412/764bff712828223755e1b6166b54cbb4.webp" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></div>
+                                    <div class="desc">摘要：       今天给各位分享兰州狗粮批发市场电话地址的知识，其中也会对兰州狗狗市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗粮批发哪里便宜又好..</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-03</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10558.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）" src="/uploads/20240412/72f6826af5452ce6927f6b8658454153.webp" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></div>
+                                    <div class="desc">摘要：       今天给各位分享济南美联众合动物医院李松大夫电话的知识，其中也会对济南市美联众合动物医院进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、乌鲁.</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-02</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10557.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格" src="/uploads/20240412/dd1a69f2603911b1df7ac0b848942804.webp" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></div>
+                                    <div class="desc">摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物防疫疫苗数量统计表的问题，于是小编就整理了2个相关介绍动物防疫疫苗数量统计表的解答，让我们一起看看吧。学校发的疫苗接种情况怎</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-02</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10508.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="收狗狗的平台叫什么的简单介绍" src="/uploads/20240412/72f6826af5452ce6927f6b8658454153.webp" title="收狗狗的平台叫什么的简单介绍">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></div>
+                                    <div class="desc">摘要：       今天给各位分享收狗狗的平台叫什么的知识，其中也会对进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、要卖狗在什么网2、...        今</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-01</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-10507.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全" src="/uploads/20240412/4c3f77d9fa30d718a566596a03016b72.webp" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></div>
+                                    <div class="desc">摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗新规定有哪些种类图片的问题，于是小编就整理了2个相关介绍动物疫苗新规定有哪些种类图片的解答，让我们一起看看吧。动物防疫法</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 11-01</dd>
+                                </dl>
+                            </div>
                                                     </div>
                     </div>
-                </div>
+                    <ul class="pagination"><li><a href="/html/date/2024-11/page-2.htm">&laquo;</a></li> <li><a href="/html/date/2024-11/">1</a></li><li><a href="/html/date/2024-11/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default box article-list">
     <div class="panel-heading">
@@ -139,16 +226,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9726.htm" title="动物疫苗对人体有害吗 动物疫苗对人体有害吗知乎">动物疫苗对人体有害吗 动物疫苗对人体有害吗知乎</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10822.htm" title="有宠物回收的吗（有宠物回收的吗知乎）">有宠物回收的吗（有宠物回收的吗知乎）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10961.htm" title="宠物领养平台app推荐哪个软件最好（宠物领养 app）">宠物领养平台app推荐哪个软件最好（宠物领养 app）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
                         <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10456.htm" title="1970年农历4月27日7时生五行（1970年4月27日生日命运）">1970年农历4月27日7时生五行（1970年4月27日生日命运）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
                     </ul>
     </div>
 </div>
@@ -159,7 +246,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">22</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
