bu de chan pin xi jie lai kan wu lun shi ying jian pei zhi hai shi ruan jian diao xiao zong he ti yan

--- a/html/date/2024-08/page-6.htm
+++ b/html/date/2024-08/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9726.htm" title="动物疫苗对人体有害吗 动物疫苗对人体有害吗知乎">动物疫苗对人体有害吗 动物疫苗对人体有害吗知乎</a></li>
-                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10770.htm" title="昂刺鱼青菜汤的做法(清汤昂刺鱼的做法)">昂刺鱼青菜汤的做法(清汤昂刺鱼的做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10052.htm" title="关于阿城宠物寄养的信息">关于阿城宠物寄养的信息</a></li>
-                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
+                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10715.htm" title="预制菜品是什么意思">预制菜品是什么意思</a></li>
+                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
+                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11266.htm" title="素圈戒指哪个牌子好(素圈戒指谁家的好)">素圈戒指哪个牌子好(素圈戒指谁家的好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
