--- a/html/date/2024-07/index.htm
+++ b/html/date/2024-07/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10999.htm" title="汽车用品报（汽车用品报销单怎么写）">汽车用品报（汽车用品报销单怎么写）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11266.htm" title="素圈戒指哪个牌子好(素圈戒指谁家的好)">素圈戒指哪个牌子好(素圈戒指谁家的好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
+                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
                         <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10257.htm" title="动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）">动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9725.htm" title="昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）">昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10258.htm" title="宠物寄养合同范本大全（宠物寄养合同有没有法律效应）">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10052.htm" title="关于阿城宠物寄养的信息">关于阿城宠物寄养的信息</a></li>
-                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
