--- a/html/date/2024-07/page-2.htm
+++ b/html/date/2024-07/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
-                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10662.htm" title="济南猫咪领养网（济南免费领养小奶猫网站）">济南猫咪领养网（济南免费领养小奶猫网站）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9781.htm" title="重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）">重庆狗狗领养贴吧（重庆狗狗领养贴吧最新消息）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-9725.htm" title="昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）">昆明哪里可以免费领养宠物狗狗（昆明哪里可以免费领养宠物狗狗呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10156.htm" title="哪里有回收狗的地方（专门卖宠物的app）">哪里有回收狗的地方（专门卖宠物的app）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10961.htm" title="宠物领养平台app推荐哪个软件最好（宠物领养 app）">宠物领养平台app推荐哪个软件最好（宠物领养 app）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11316.htm" title="动物注射疫苗的流程视频 动物注射疫苗的流程视频讲解">动物注射疫苗的流程视频 动物注射疫苗的流程视频讲解</a></li>
+                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
