--- a/html/date/2024-09/page-6.htm
+++ b/html/date/2024-09/page-6.htm
@@ -194,16 +194,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9944.htm" title="妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）">妙三多接种间隔（妙三多疫苗间隔时间太短怎么办）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10209.htm" title="丝瓜虾酱做法大全(丝瓜酿大虾家常做法)">丝瓜虾酱做法大全(丝瓜酿大虾家常做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10104.htm" title="首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）">首届禁烟奥运会是哪届（首届禁烟奥运会是哪届奥运会）</a></li>
                         <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11073.htm" title="打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）">打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11165.htm" title="燃气回访电话怎么打(燃气公司回访用户方案)">燃气回访电话怎么打(燃气公司回访用户方案)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11125.htm" title="中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）">中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10258.htm" title="宠物寄养合同范本大全（宠物寄养合同有没有法律效应）">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10257.htm" title="动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）">动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）</a></li>
                     </ul>
     </div>
 </div>
@@ -214,7 +214,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">26</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
