--- a/html/date/2024-08/page-3.htm
+++ b/html/date/2024-08/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10103.htm" title="狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）">狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9833.htm" title="2021年春节旅游景点(2021年春节期间旅游景点)">2021年春节旅游景点(2021年春节期间旅游景点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
                         <li class="py-2"><a href="/html/category/article-11165.htm" title="燃气回访电话怎么打(燃气公司回访用户方案)">燃气回访电话怎么打(燃气公司回访用户方案)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10999.htm" title="汽车用品报（汽车用品报销单怎么写）">汽车用品报（汽车用品报销单怎么写）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10257.htm" title="动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）">动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11362.htm" title="动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）">动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）</a></li>
                         <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
