--- a/html/date/2024-08/page-4.htm
+++ b/html/date/2024-08/page-4.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-11315.htm" title="宠物粮食市场营销调查（宠物粮市场分析）">宠物粮食市场营销调查（宠物粮市场分析）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10349.htm" title="猫粮制造机器（宠物粮加工设备一套得多少钱）">猫粮制造机器（宠物粮加工设备一套得多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11361.htm" title="免费领养狗狗的平台 免费领养狗狗的平台有哪些">免费领养狗狗的平台 免费领养狗狗的平台有哪些</a></li>
+                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
+                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
                         <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10715.htm" title="预制菜品是什么意思">预制菜品是什么意思</a></li>
-                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11073.htm" title="打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）">打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10403.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11125.htm" title="中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）">中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
