--- a/html/date/2024-08/page-6.htm
+++ b/html/date/2024-08/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10350.htm" title="动物疫病预防中心 动物疫病预防中心是干什么的">动物疫病预防中心 动物疫病预防中心是干什么的</a></li>
-                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10456.htm" title="1970年农历4月27日7时生五行（1970年4月27日生日命运）">1970年农历4月27日7时生五行（1970年4月27日生日命运）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10661.htm" title="一片片枫叶像什么一样（一片片枫叶什么写句）">一片片枫叶像什么一样（一片片枫叶什么写句）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11315.htm" title="宠物粮食市场营销调查（宠物粮市场分析）">宠物粮食市场营销调查（宠物粮市场分析）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10257.htm" title="动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）">动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
                         <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10715.htm" title="预制菜品是什么意思">预制菜品是什么意思</a></li>
-                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11266.htm" title="素圈戒指哪个牌子好(素圈戒指谁家的好)">素圈戒指哪个牌子好(素圈戒指谁家的好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10155.htm" title="长沙宠物狗领养网站（长沙宠物狗领养网站大全）">长沙宠物狗领养网站（长沙宠物狗领养网站大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
