--- a/html/date/2024-09/index.htm
+++ b/html/date/2024-09/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
+                        <li class="py-2"><a href="/html/category/article-11362.htm" title="动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）">动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
                         <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10770.htm" title="昂刺鱼青菜汤的做法(清汤昂刺鱼的做法)">昂刺鱼青菜汤的做法(清汤昂刺鱼的做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-11073.htm" title="打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）">打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9834.htm" title="动物防疫证在哪办（动物防疫证在哪里可以办理）">动物防疫证在哪办（动物防疫证在哪里可以办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-10769.htm" title="被猫抓伤后症状图片（被猫抓伤的伤痕图片）">被猫抓伤后症状图片（被猫抓伤的伤痕图片）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10257.htm" title="动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）">动物疫苗新规定有哪些品种的种类（动物疫苗新规定有哪些品种的种类图片）</a></li>
                         <li class="py-2"><a href="/html/category/article-10961.htm" title="宠物领养平台app推荐哪个软件最好（宠物领养 app）">宠物领养平台app推荐哪个软件最好（宠物领养 app）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10258.htm" title="宠物寄养合同范本大全（宠物寄养合同有没有法律效应）">宠物寄养合同范本大全（宠物寄养合同有没有法律效应）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11216.htm" title="罗格朗开关是品牌吗(罗格朗开关质量怎么样)">罗格朗开关是品牌吗(罗格朗开关质量怎么样)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
