--- a/html/date/2024-09/page-3.htm
+++ b/html/date/2024-09/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
                         <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11074.htm" title="动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）">动物疫苗的种类有哪些图片及价格大全图（动物疫苗的种类有哪些图片及价格大全图解）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10661.htm" title="一片片枫叶像什么一样（一片片枫叶什么写句）">一片片枫叶像什么一样（一片片枫叶什么写句）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11266.htm" title="素圈戒指哪个牌子好(素圈戒指谁家的好)">素圈戒指哪个牌子好(素圈戒指谁家的好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-9890.htm" title="十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片">十大动物疫苗公司有哪些品牌名称 十大动物疫苗公司有哪些品牌名称图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-11215.htm" title="喊话器录音什么格式好用(喊话器录音什么格式好听)">喊话器录音什么格式好用(喊话器录音什么格式好听)</a></li>
-                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10209.htm" title="丝瓜虾酱做法大全(丝瓜酿大虾家常做法)">丝瓜虾酱做法大全(丝瓜酿大虾家常做法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
+                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
