--- a/html/date/2024-10/page-3.htm
+++ b/html/date/2024-10/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10052.htm" title="关于阿城宠物寄养的信息">关于阿城宠物寄养的信息</a></li>
-                        <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
-                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11266.htm" title="素圈戒指哪个牌子好(素圈戒指谁家的好)">素圈戒指哪个牌子好(素圈戒指谁家的好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11315.htm" title="宠物粮食市场营销调查（宠物粮市场分析）">宠物粮食市场营销调查（宠物粮市场分析）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9943.htm" title="中国宠物粮品牌（宠物粮品牌大全）">中国宠物粮品牌（宠物粮品牌大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11073.htm" title="打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）">打了疫苗可以吃动物内脏吗（打完疫苗可以吃内脏嘛）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10661.htm" title="一片片枫叶像什么一样（一片片枫叶什么写句）">一片片枫叶像什么一样（一片片枫叶什么写句）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11411.htm" title="中国兽药公司前50名（中国兽药公司前50名排名）">中国兽药公司前50名（中国兽药公司前50名排名）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11165.htm" title="燃气回访电话怎么打(燃气公司回访用户方案)">燃气回访电话怎么打(燃气公司回访用户方案)</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">32</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
