--- a/html/date/2024-08/index.htm
+++ b/html/date/2024-08/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/html/category/article-11000.htm" title="宠物猫批发价多少钱（宠物猫批发市场）">宠物猫批发价多少钱（宠物猫批发市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10298.htm" title="养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）">养狗的人容易得15种病小狗需要打促死疫苗的针吗（狗必须打什么疫苗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11265.htm" title="人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)">人生路不熟红色车是什么牌子多少钱(人生路不熟是什么意思)</a></li>
-                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11561.htm" title="宠物医生报考哪个专业（宠物医生报考哪个专业好）">宠物医生报考哪个专业（宠物医生报考哪个专业好）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11411.htm" title="中国兽药公司前50名（中国兽药公司前50名排名）">中国兽药公司前50名（中国兽药公司前50名排名）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10822.htm" title="有宠物回收的吗（有宠物回收的吗知乎）">有宠物回收的吗（有宠物回收的吗知乎）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10558.htm" title="济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）">济南美联众合动物医院李松大夫电话（济南市美联众合动物医院）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
                         <li class="py-2"><a href="/html/category/article-10962.htm" title="动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）">动物疫苗接种方法及注意事项有哪些内容图片（动物疫苗注射的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-11412.htm" title="开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）">开宠物店一天能赚多少钱（开宠物店一个月可以赚多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10508.htm" title="收狗狗的平台叫什么的简单介绍">收狗狗的平台叫什么的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">46</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
