--- a/html/date/2024-09/page-3.htm
+++ b/html/date/2024-09/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10821.htm" title="红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)">红烧猪蹄怎么做窍门(红烧猪蹄怎么做法)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10210.htm" title="宠物粮食价格表 宠物粮食价格表图片">宠物粮食价格表 宠物粮食价格表图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-10856.htm" title="猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）">猫咪3针打完以后每年打什么针比较好（猫咪三针多久打一次）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10609.htm" title="兰州狗粮批发市场电话地址（兰州狗狗市场）">兰州狗粮批发市场电话地址（兰州狗狗市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11511.htm" title="动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）">动物接种疫苗多少钱一针啊视频讲解图片（动物疫苗接种方法及注意事项）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11512.htm" title="川菜大全（川菜大全130道菜名字）">川菜大全（川菜大全130道菜名字）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11126.htm" title="三国杀限定技能特效在哪（三国杀 限定技）">三国杀限定技能特效在哪（三国杀 限定技）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11562.htm" title="自己拿疫苗去宠物医院打可以吗多少钱（自己买疫苗去宠物店打）">自己拿疫苗去宠物医院打可以吗多少钱（自己买疫苗去宠物店打）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11461.htm" title="动物防疫疫苗种类大全图（动物疫苗知识）">动物防疫疫苗种类大全图（动物疫苗知识）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11362.htm" title="动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）">动物疫苗多少钱一支啊图片高清大全及价格（动物疫苗多少钱一支啊图片高清大全及价格查询）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11125.htm" title="中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）">中国十大宠物粮上市公司排名前十名有哪些（中国宠物粮生产企业）</a></li>
+                        <li class="py-2"><a href="/html/category/article-11411.htm" title="中国兽药公司前50名（中国兽药公司前50名排名）">中国兽药公司前50名（中国兽药公司前50名排名）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-10610.htm" title="哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)">哪些车是二手车市场比较畅销的车型呢(什么二手车销量最好)</a></li>
                         <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
-                        <li class="py-2"><a href="/html/category/article-10455.htm" title="一只猫要多少钱（火车托运一只猫要多少钱）">一只猫要多少钱（火车托运一只猫要多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-10855.htm" title="动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）">动物医院开设条件有哪些要求和标准（开动物医院需要具备哪些条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-11166.htm" title="关于动物疫苗生产厂家排名榜最新名单及价格的信息">关于动物疫苗生产厂家排名榜最新名单及价格的信息</a></li>
-                        <li class="py-2"><a href="/html/category/article-10404.htm" title="动物防疫站在哪（动物防疫机构在哪）">动物防疫站在哪（动物防疫机构在哪）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">40</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">46</span></li>
                         <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
